nifi/nifi-sts-https.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nifi
  namespace: nifi
spec:
  podManagementPolicy: Parallel
  replicas: 1
  selector:
    matchLabels:
      app: nifi
  serviceName: nifi-svc-headless
  template:
    metadata:
      labels:
        app: nifi
    spec:
      serviceAccountName: nifi
      securityContext:
        fsGroup: 1000 # Replace with NiFi GID
        runAsUser: 1000 # Replace with NiFi UID
        runAsGroup: 1000 # Replace with NiFi GID
      containers:
      - name: nifi
        image: "apache/nifi:1.20.0"
        #imagePullPolicy: Always
        volumeMounts:
        - name: nifi-volume
          mountPath: "/opt/nifi/nifi-current/data"
        ports:
        - containerPort: 8443
          name: https-port
        readinessProbe:
          httpGet:
            path: /nifi/
            port: 8443
            scheme: HTTPS
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 3
      volumes:
      - name: nifi-volume
        persistentVolumeClaim:
          claimName: nifi-pvc
        # resources:
        #   requests:
        #     memory: "1Gi"
        #     cpu: "500m"
        #   limits:
        #     memory: "2Gi"
        #     cpu: "1000m"
