nifi/nifi-svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: nifi-svc-headless
  namespace: nifi
spec:
  clusterIP: None
  type: ClusterIP
  ports:
  - port: 443
    targetPort: 8443
    protocol: TCP
    name: https-port
  selector:
    app: nifi
